--- a/0x00/src/app/components/child/child.component.html
+++ b/0x00/src/app/components/child/child.component.html
@@ -1,4 +1,5 @@
 <section>
   <p>child works!</p>
   <p>The framework name is: {{ frameworkName }}</p>
+  <button type="button" (click)="addNumber()">Add number</button>
 </section>
