--- a/0x00/src/app/components/parent/parent.component.html
+++ b/0x00/src/app/components/parent/parent.component.html
@@ -1,4 +1,8 @@
 <section>
   <p>parent works!</p>
-  <app-child frameworkName="angular"></app-child>
+  <app-child
+    frameworkName="angular"
+    (addNumberEvent)="addNumber($event)"
+  ></app-child>
+  <p>Numbers: {{ numbers.length }}</p>
 </section>
