--- a/0x00/src/app/components/tutorial-page/tutorial-page.component.html
+++ b/0x00/src/app/components/tutorial-page/tutorial-page.component.html
@@ -25,6 +25,7 @@
 <h2>property binding</h2>
 <section>
   <div [contentEditable]="isEditable">...div...</div>
+  <button type="button" [disabled]="isEditable">...button...</button>
 </section>
 <h2>event handling</h2>
 <section>
