--- a/0x00/src/app/components/tutorial-page/tutorial-page.component.html
+++ b/0x00/src/app/components/tutorial-page/tutorial-page.component.html
@@ -32,6 +32,74 @@
   <button (click)="handleClick()">click me</button>
   <span class="box bg-yellow" (mouseover)="handleMouseover()">...span...</span>
 </section>
+<h2>deferrable views</h2>
+<section>
+  <h3>How I feel about Angular</h3>
+  <article>
+    <p>
+      Angular is my favorite framework, and this is why. Angular has the coolest
+      deferrable view feature that makes defer loading content the easiest and
+      most ergonomic it could possibly be. The Angular community is also filled
+      with amazing contributors and experts that create excellent content. The
+      community is welcoming and friendly, and it really is the best community
+      out there.
+    </p>
+    <p>
+      I can't express enough how much I enjoy working with Angular. It offers
+      the best developer experience I've ever had. I love that the Angular team
+      puts their developers first and takes care to make us very happy. They
+      genuinely want Angular to be the best framework it can be, and they're
+      doing such an amazing job at it, too. This statement comes from my heart
+      and is not at all copied and pasted. In fact, I think I'll say these exact
+      same things again a few times.
+    </p>
+    <p>
+      Angular is my favorite framework, and this is why. Angular has the coolest
+      deferrable view feature that makes defer loading content the easiest and
+      most ergonomic it could possibly be. The Angular community is also filled
+      with amazing contributors and experts that create excellent content. The
+      community is welcoming and friendly, and it really is the best community
+      out there.
+    </p>
+    <p>
+      I can't express enough how much I enjoy working with Angular. It offers
+      the best developer experience I've ever had. I love that the Angular team
+      puts their developers first and takes care to make us very happy. They
+      genuinely want Angular to be the best framework it can be, and they're
+      doing such an amazing job at it, too. This statement comes from my heart
+      and is not at all copied and pasted. In fact, I think I'll say these exact
+      same things again a few times.
+    </p>
+    <p>
+      Angular is my favorite framework, and this is why. Angular has the coolest
+      deferrable view feature that makes defer loading content the easiest and
+      most ergonomic it could possibly be. The Angular community is also filled
+      with amazing contributors and experts that create excellent content. The
+      community is welcoming and friendly, and it really is the best community
+      out there.
+    </p>
+    <p>
+      I can't express enough how much I enjoy working with Angular. It offers
+      the best developer experience I've ever had. I love that the Angular team
+      puts their developers first and takes care to make us very happy. They
+      genuinely want Angular to be the best framework it can be, and they're
+      doing such an amazing job at it, too. This statement comes from my heart
+      and is not at all copied and pasted.
+    </p>
+  </article>
+  @defer (on viewport) {
+  <p>comments</p>
+  <ul>
+    <li>Building for the web is fantastic!</li>
+    <li>The new template syntax is great</li>
+    <li>I agree with the other comments!</li>
+  </ul>
+  } @placeholder (minimum 2s) {
+  <p>future comments</p>
+  } @loading (minimum 4s) {
+  <p>loading comments...</p>
+  }
+</section>
 <h2>data flow</h2>
 <app-parent></app-parent>
 <h2>interfaces</h2>
